Initial import of reQuiRe code

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Sinatra + Twitter Bootstrap</title>
+		<title>reQuiRe</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,33 +25,21 @@
 			      <span class="icon-bar"></span>
 			      <span class="icon-bar"></span>
 			    </button>
-			    <a class="navbar-brand" href="/">Sinatra + Twitter Bootstrap</a>
+			    <a class="navbar-brand" href="/">reQuiRe</a>
 			  </div>
 			  <div class="navbar-collapse collapse">
-			    <ul class="nav navbar-nav">
-			      <li><a href="/secure/place">Secret</a></li>
-			    </ul>
 			    <ul class="nav navbar-nav navbar-right">
-			        <li class="dropdown">
-			          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%=username%> <b class="caret"></b></a>
-			        <ul class="dropdown-menu">
-			            <li><a href="/login/form">Login</a></li>
-			            <li class="divider"></li>
-			            <li><a href="/logout">Logout</a></li>
-			        </ul>
-			      </li>
-        
+			      <li><a href="/about">About</a></li>
+			      <li><a href="/contact">Contact</a></li>
 			    </ul>
 			  </div><!--/.nav-collapse -->
 			</div>
-
 			<div>
 			      <%if @error then %>
 			          <div class="alert alert-error"><%=@error%></div>
 			      <% end %>
 			      <%= yield %>
 			</div>
-
 	</div>
 
 
